# pathfinder-society-scribe

./: .gitignore  Dockerfile  LICENSE  README.md  agent_tasks.md  conftest.py  docker-compose.yml  docker-requirements.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_tutorial.py  tasks.py
OLD_ARCH/game_data/: core_game_data.py
OLD_ARCH/pathbuilder_imports/: huoguo.json
OLD_ARCH/pf2e_index/: es_indexer.py  schema.sql
OLD_ARCH/pf2e_mcp/: __init__.py
OLD_ARCH/pf2e_mcp/registry/: base.py
OLD_ARCH/pf2e_mcp/tools/: db_tools.py  dice.py
OLD_ARCH/society_scribe/: mcp_bridge.py  society_scribe.py
game_data/: campaign_helpers.py  schema_campaign.sql
game_data/player_characters/maryx_two-toe/: maryx_two-toe.json
pf2e_mcp/: server.py
pf2e_mcp/registry/: __init__.py
pf2e_mcp/tools/: __init__.py  campaign_tools.py
scripts/: init_campaign_db.py
society_scribe/: mcp_bridge.py  society_scribe.py
src/managers/: campaign_manager.py  character_manager.py
src/models/: __init__.py  abilities.py  base.py  campaign.py  character.py  equipment.py  spellcasting.py
src/web/: app.py
tests/: test_core_game_data.py  test_docker_run_qwen.py  test_docker_setup.py  test_managers.py  test_models.py
utility/: logging_config.py
